fix(education): fixed education layout issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,5 +11,5 @@
 }
 
 .screen {
-  @apply h-screen overflow-x-hidden relative pt-14 md:pt-2 lg:mx-20;
+  @apply px-4 h-screen overflow-x-hidden relative pt-14 md:pt-2 lg:px-20;
 }
